--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -65,7 +65,7 @@
         <a href="../" title="Data Nomads">Data Nomads</a>
         <a href="../category/misc.html">misc</a>
         <a href="https://larryfritts.com/">Larry Fritts</a>
-        <a href="https://rriehle.com/">Richard Riehle</a>
+        <a href="https://www.rriehle.dev/">Richard Riehle</a>
 
     </footer>
 
