--- a/output/hello-world-of-data.html
+++ b/output/hello-world-of-data.html
@@ -78,7 +78,7 @@
         <a href="./" title="Data Nomads">Data Nomads</a>
         <a href="./category/misc.html">misc</a>
         <a href="https://larryfritts.com/">Larry Fritts</a>
-        <a href="https://rriehle.com/">Richard Riehle</a>
+        <a href="https://www.rriehle.dev/">Richard Riehle</a>
 
     </footer>
 
