--- a/output/announcing-the-data-nomads-podcast.html
+++ b/output/announcing-the-data-nomads-podcast.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./theme/css/theme.css">
 
   
-  <meta name="description" content="We have recorded our introductory podcast which we plan to publish through all the usual channels (iTunes, Google Play, etc.) within the next couple of weeks. In the meantime here is a sneak preview of the first datanomads.dev podcast. Send us an email at podcast@datanomads.dev if you …">
+  <meta name="description" content="We have recorded our introductory podcast which we plan to publish through all the usual channels (iTunes, Google Play, etc.) within the next couple of weeks. In the meantime, here is a sneak preview of the first Data Nomads podcast. Send us an email at podcast@datanomads.dev if you …">
 
 
 </head>
@@ -61,7 +61,7 @@
     </header>
     <div class="content">
       <p>We have recorded our introductory podcast which we plan to publish through all the usual channels (iTunes, Google Play, etc.) within the next couple of weeks.</p>
-<p>In the meantime <a href="https://s3-us-west-2.amazonaws.com/datanomads.dev/DataNomads-0000.mp3" title="Data Nomads Session 0">here is a sneak preview of the first datanomads.dev podcast</a>.</p>
+<p>In the meantime, <a href="https://s3-us-west-2.amazonaws.com/datanomads.dev/DataNomads-0000.mp3" title="Data Nomads Session 0">here is a sneak preview of the first Data Nomads podcast</a>.</p>
 <p>Send us an email at <a href="mailto:podcast@datanomads.dev">podcast@datanomads.dev</a> if you would like to connect with us and/or subscribe to the ongoing podcast once it is released.</p>
 <p>-- The Nomads</p>
     </div>
